fix ipad invisible scrollbar

--- a/src/site/index.scss
+++ b/src/site/index.scss
@@ -21,7 +21,3 @@ body {
     padding-top: 0;
   }
 }
-
-.outro {
-  margin-bottom: 10vmin;
-}
